--- a/src/style.css
+++ b/src/style.css
@@ -1,96 +1,74 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+/*
+Error: Invalid CSS after "...solid variables": expected ";", was ".$grey-border-c..."
+        on line 5 of styles/_components.scss
+        from line 3 of style.scss
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+1: @use "variables";
+2: 
+3: header {
+4:   width: 100%;
+5:   border-bottom: 1px solid variables.$grey-border-color;
+6: 
+7:   .header {
+8:     display: flex;
+9:     justify-content: space-between;
+10:     align-items: center;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+Backtrace:
+styles/_components.scss:5
+style.scss:3
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1308:in `expected'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1238:in `expected'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1233:in `tok!'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:815:in `block in try_declaration'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1284:in `rethrow'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:820:in `try_declaration'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:743:in `declaration_or_ruleset'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:708:in `block_child'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:700:in `block_contents'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:689:in `block'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:681:in `ruleset'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:707:in `block_child'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:700:in `block_contents'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:137:in `stylesheet'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:41:in `parse'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/engine.rb:414:in `_to_tree'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/engine.rb:321:in `to_tree'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:323:in `block in visit_import'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/stack.rb:88:in `block in with_import'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/stack.rb:135:in `with_frame'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/stack.rb:88:in `with_import'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:322:in `visit_import'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/stack.rb:79:in `block in with_base'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/stack.rb:135:in `with_frame'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/stack.rb:79:in `with_base'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:158:in `visit'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/visitors/base.rb:52:in `map'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:157:in `visit'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/visitors/perform.rb:10:in `visit'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/root_node.rb:36:in `css_tree'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/engine.rb:389:in `_render_with_sourcemap'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/engine.rb:307:in `render_with_sourcemap'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/exec/sass_scss.rb:387:in `run'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/exec/sass_scss.rb:63:in `process_result'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/exec/base.rb:50:in `parse'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/lib/sass/exec/base.rb:18:in `parse!'
+C:/Users/miham/.local/share/gem/ruby/3.3.0/gems/sass-3.7.4/bin/sass:13:in `<top (required)>'
+C:/Users/miham/AppData/Local/Microsoft/WindowsApps/sass:32:in `load'
+C:/Users/miham/AppData/Local/Microsoft/WindowsApps/sass:32:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: Invalid CSS after \"...solid variables\": expected \";\", was \".$grey-border-c...\"\A         on line 5 of styles/_components.scss\A         from line 3 of style.scss\A \A 1: @use \"variables\";\A 2: \A 3: header {\A 4:   width: 100%;\A 5:   border-bottom: 1px solid variables.$grey-border-color;\A 6: \A 7:   .header {\A 8:     display: flex;\A 9:     justify-content: space-between;\A 10:     align-items: center;"; }
