--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -97,15 +97,15 @@ header {
       text-align: center;
       padding: 20px;
       overflow: hidden;
-      animation: scroll-x 10s linear infinite;
+      animation: scroll-x 2s linear infinite;
     }
   
   @keyframes scroll-x {
     0% {
-        transform: translateX(100%);
+        opacity: 0;
     }
     100% {
-        transform: translateX(-100%);
+      opacity: 1;
     }
   }
 }
